2008-10-20 Jerome Pasquier  <rainbru@free.fr>
	* acinclude.m4 (RB_CHECK_LIBFOX): Big improvment including check
	and usage if the fox-toolkit found and version checking.
	
2008-10-17 Jerome Pasquier  <rainbru@free.fr>
	* maincore/gamestate.cpp (GameState): Constructor now takes the
	type argument.
	
	* maincore/gameengine.cpp (mousePressed): decomment
	* client/main.cpp (main): Create and register OgreGuiQueueListener

2008-10-16 Jerome Pasquier  <rainbru@free.fr>
	* client/main.cpp (main): Initialize SkinManager.
	
	* maincore/gameengine.h: Removed the GameState type enumeration.
	* maincore/gameengine.cpp (changeState): Now using a string parameter.

2008-10-15 Jerome Pasquier  <rainbru@free.fr>
	I must move some code from maincore to client to avoid
	the maincore library ro be linked with ogreGui.

	* maincore/gameengine.cpp (getGameStateIndexByName): implementation
	* maincore/gameengine.cpp (registerGameState): implementation
	
	* ogreGui/bggui.h: GUI become a singleton
	* maincore/exampleframelistener.*: moved to client/  
	* maincore/guiframelistener.*: moved to client/  
	* maincore/guimanager.*: moved to client/  

2008-10-14 Jerome Pasquier  <rainbru@free.fr>
	I must move some code from maincore to client to avoid
	the maincore library ro be linked with ogreGui.
	
	* maincore/gsconnection.*: moved to client/  
	* maincore/gsserverlist.*: moved to client/
	* maincore/gscreateaccount.h *: moved to client/
	
	* maincore/gsmenubase.cpp: moved to client/
	* maincore/gsmenubase.h: moved to client/
	* maincore/gsmainmenu.cpp: moved to client/
	* maincore/gsmainmenu.h: moved to client/
	
2008-10-10 Jerome Pasquier  <rainbru@free.fr>
	* create_dll.sh: Implementation of a shell script that
	help developpers to create win32 shared libraries.
	* common/Makefile.am: A dll rule that create the win32 shared
	library using create_dll.sh.
	* maincore/Makefile.am: A dll rule that create the win32 shared
	library using create_dll.sh.
	