@@ -1,6 +1,8 @@
 2008-10-20 Jerome Pasquier  <rainbru@free.fr>
 	* acinclude.m4 (RB_CHECK_LIBFOX): Big improvment including check
 	and usage if the fox-toolkit found and version checking.
+	* acinclude.m4: Many checks removed for many libraries only when
+	cross-compiling to win32. These cheks were failling.
 	
 2008-10-17 Jerome Pasquier  <rainbru@free.fr>
 	* maincore/gamestate.cpp (GameState): Constructor now takes the
